[gd_scene load_steps=5 format=3 uid="uid://coso5sdjy2f1k"]

[ext_resource type="StyleBox" uid="uid://dpr731vksqp7u" path="res://world_panel.tres" id="1_bo12k"]
[ext_resource type="StyleBox" uid="uid://bugc84wo78301" path="res://button_normal.tres" id="2_g1rk3"]
[ext_resource type="Script" path="res://region_panel.gd" id="2_qny5e"]
[ext_resource type="StyleBox" uid="uid://b43o1nyv0s1mf" path="res://button_hover.tres" id="3_ydqvq"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("1_bo12k")
script = ExtResource("2_qny5e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "Shop"

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Eye"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Tent"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Other"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "All"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "100"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "1.1K"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "479M"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Facepage"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "100"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "1.1K"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "479M"
horizontal_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Twittly"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "100"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "1.1K"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "479M"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Harvest"
horizontal_alignment = 2

[node name="Label5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "1"

[node name="Label6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "10
"

[node name="Label7" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "100
"

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Acolytes"
horizontal_alignment = 2

[node name="Label5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "-1"

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "0
"
horizontal_alignment = 1

[node name="Label7" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_styles/normal = ExtResource("2_g1rk3")
theme_override_styles/hover = ExtResource("3_ydqvq")
text = "+1"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Label4" to="." method="_on_label_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer7/Label5" to="." method="_on_label_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer7/Label6" to="." method="_on_label_6_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer7/Label7" to="." method="_on_label_7_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer8/Label5" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer8/Label7" to="." method="_on_plus_pressed"]
